project's structure refactored

--- a/itgm6/index.html
+++ b/itgm6/index.html
@@ -7,365 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
   <!-- Site Properities -->
-  <title>Homepage - Semantic</title>
+  <title>IT Global Meetup 6</title>  
   <link rel="stylesheet" type="text/css" href="./dist/semantic.min.css">
+  <link rel="stylesheet" type="text/css" href="./assets/css/site.css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,400italic,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
-
-  <style type="text/css">
-    body {
-      font-family: 'Open Sans';
-    }
-
-    .ui.button {
-      font-family: 'Open Sans';
-      font-weight: 400;
-    }
-
-    .ui.primary.button {
-      background-color: #ff8300;
-    }
-    .ui.primary.button:hover {
-      background-color: #974508;
-    }    
-
-
-    a.link {
-      color: #ff8300;
-      border-bottom: 1px dotted #ff8300;
-    }
-
-    a.link:hover {
-      color: #974508;
-      border-bottom: 1px dotted #974508;
-    }
-
-    .hidden.menu {
-      display: none;
-    }
-
-    #firstslide {
-      min-height: 700px;
-      padding: 1em 0em;
-      background: url('./assets/images/photos/bg_main1.jpg') center center no-repeat; 
-      -webkit-background-size: cover; 
-      -moz-background-size: cover; 
-      -o-background-size: cover; 
-      background-size: cover;       
-      position: relative;
-      overflow:hidden;  
-    }
-
-    #firstslide.card {
-      width: 100%;
-      box-shadow: none;
-      padding-bottom: 0;
-      color: #ffffff;
-    }
-
-    #firstslide.card .content {
-      border-top: none;
-    }
-
-    #firstslide.card .top.content {
-      padding: 10px 50px;
-    }  
-
-    #firstslide.card .top.content i {
-      color: #ffffff;
-    } 
-
-    #firstslide.card .info.content h2 {
-      font-size: 44px;
-      font-weight: 300;
-    }
-    #firstslide.card .info.content h3 {
-      font-size: 32px;      
-    }   
-
-    #firstslide.card .info.content .description {
-      font-size: 18px;      
-    }       
-
-    #firstslide .container .info {
-      margin-top: 6em;
-    }
-    #firstslide h1.ui.header {
-      font-size: 4em;
-    }
-
-    #firstslide .cta {
-      margin-top: 4em;
-      margin-bottom: 4em;  
-    } 
-
-    #firstslide.card .info.content .header,
-    #firstslide.card .info.content .description {
-      color: #ffffff;
-    }
-
-    #firstslide.card .extra.content {
-      background-color: rgba(0, 0, 0, .4);
-      color: #ffffff;
-      font-size: 16px;
-      font-weight: 300;
-      padding: 20px 0;
-    }
-
-    .cta {
-      margin-top: 4em;
-      margin-bottom: 4em;       
-    }
-
-    #firstslide h2 {
-      font-size: 3em;
-      font-weight: normal;
-    }
-
-    .ui.vertical.stripe {
-      padding: 2em 0em;
-    }
-
-    .ui.vertical.stripe .button + h3,
-    .ui.vertical.stripe p + h3 {
-      margin-top: 3em;
-    }
-    .ui.vertical.stripe .floated.image {
-      clear: both;
-    }
-    .ui.vertical.stripe p {
-      font-size: 1em;
-    }
-    .ui.vertical.stripe .horizontal.divider {
-      margin: 3em 0em;
-    }
-    .quote.stripe.segment {
-      padding: 0em;
-    }
-    .quote.stripe.segment .grid .column {
-      padding-top: 5em;
-      padding-bottom: 5em;
-    }
-    .footer.segment {
-      padding: 5em 0em;
-    }
-    .secondary.pointing.menu .toc.item {
-      display: none;
-    }
-
-    /*.ui.container h1 {
-      margin: 2em 0;
-    }*/
-
-    .ui.container .h-hero {
-      margin-bottom: 2em;
-      color: #ff8300;
-    }
-
-    .ui.grid.photos {
-      margin-top: 48px;
-      margin-bottom: 0px;
-    }
-
-    .ui.grid.photos .column {
-      margin: 0;
-      padding: 4px 0 0 4px;
-    }
-    .ui.grid.photos .row {
-      padding:0;
-    }
-
-    #topmenu .mini.image {
-      width: 24px;
-      height: 24px;
-    }
-
-    #about {
-      padding-bottom: 0px;
-    }
-
-    #about .stat {
-      font-size: 3em;
-    }
-    #about .ui.grid .row {
-      /*margin-top: 2em;*/
-    }
-
-    #timeline {
-      border-bottom: none;
-    }
-
-    #timeline .time {
-      color: #974508;
-    }
-
-    #timeline p {
-      color: #777777;
-    }
-
-    #partners {
-      border-bottom: none;
-    }
-
-    #partners .card,
-    #infopartners .card {
-      box-shadow: none;      
-    }
-
-    #partners .content {
-      padding: 0;
-    }
-
-    .partners .frame,
-    #infopartners .frame {
-      height: 120px;      /* equals max image height */
-      width: 120px;      
-      white-space: nowrap;  
-      margin-left: auto;
-      margin-right: auto;
-      margin-bottom: 10px;            
-    }
-
-    .partners .frame:before,
-    .partners .frame_before {
-        content: "";
-        display: inline-block;
-        height: 100%;
-        vertical-align: middle;
-    }   
-
-    .partners .frame img {      
-      vertical-align: middle;
-      max-height: 120px;
-      max-width: 120px;    
-    } 
-
-    #partners .cards {
-      margin-bottom: 30px;
-    }  
-
-    #infopartners {
-      padding-top: 50px;
-    }
-
-    #money {
-      background-color: #fafafa;
-    }
-
-    #money iframe {
-      margin-top: 2em;
-    }
-
-    #map .ui.card {
-      position: absolute;
-      z-index: 1;
-      margin-top: 100px;
-      margin-left: 100px;
-      min-height: 350px;
-
-    }  
-
-    #map .ui.card .content {
-      border-top: none;
-    }
-
-    #map .ui.card .content .description {
-      margin-top: 10px;
-    }
-
-    #map .ui.card .content .link {
-      font-size: 10px;
-      margin-left: 20px;
-    }
-    
-    #map, #map .ui.segment {
-      margin: 0;
-      padding: 0;
-      border: none;
-    }
-
-    #map .icon {
-      color: #ff8300;
-    }
-
-    #canvas-map {
-      position: relative;
-      min-height: 600px;
-      width: 100%;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-    }
-
-    #programme .ui.header {
-      margin-bottom: 10px;
-    }
-
-    #programme .ui.dialog.header {
-      min-height: 100px;
-    }
-
-    #programme .ui.dialog.header .title {
-      font-size: 26px;
-      font-weight: 300;
-    }
-
-    #programme .ui.dialog.header .description {
-      font-size: 14px; 
-      font-weight: 400;  
-      margin-top: 10px;   
-    }    
-
-    #programme .start {
-      color: #974508;
-      margin-bottom: 2px;
-    }
-
-    #programme .circular.image {
-      width: 44px;
-      border-radius: 22px;
-    }
-
-    #programme .item .author {
-      font-size: 16px;
-      font-weight: 600;
-    }
-
-    #programme .row .ui.items {
-      margin-top: 30px;
-    }
-
-    #programme .empty.content .header {
-      font-weight: 300;
-      font-size: 24px;
-      color: #974508;
-      margin-right: 20px;
-    }
-
-    @media only screen and (max-width: 700px) {
-      .ui.fixed.menu {
-        display: none !important;
-      }
-      .secondary.pointing.menu .item,
-      .secondary.pointing.menu .menu {
-        display: none;
-      }
-      .secondary.pointing.menu .toc.item {
-        display: block;
-      }
-      .masthead.segment {
-        min-height: 350px;
-      }
-      .masthead h1.ui.header {
-        font-size: 2em;
-        margin-top: 1.5em;
-      }
-      .masthead h2 {
-        margin-top: 0.5em;
-        font-size: 1.5em;
-      }
-    }
-  </style>
 </head>
 <body>
 
@@ -1289,15 +934,13 @@
   </div>
 </div>
 
-<script src="./assets/library/jquery.min.js"></script>
+<script src="./assets/js/vendor/jquery.min.js"></script>
 <script src="./dist/semantic.min.js"></script>
-
 <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
+<script src="./assets/js/map.js"></script>
 <script src="./assets/js/site.js"></script>
-<script src="./assets/js/vendor/foundation.min.js"></script>
-<script src="./assets/js/vendor/foundation.magellan.js"></script>
-<script type="text/javascript" src="./assets/js/jquery.plugin.js"></script>
-<script type="text/javascript" src="./assets/js/jquery.countdown.js"></script>
+<script type="text/javascript" src="./assets/js/vendor/jquery.plugin.js"></script>
+<script type="text/javascript" src="./assets/js/vendor/jquery.countdown.js"></script>
 <script type="text/javascript">
   var futureDate = new Date("November 28, 2015 11:00:00");
   $('.countdown').countdown({
@@ -1307,47 +950,6 @@
     layout      : $('.countdown').html()
   });
 </script>
-
-  <script>
-  $(document)
-    .ready(function() {
-      // fix menu when passed
-      $('#firstslide')
-        .visibility({
-          once: false,
-          onBottomPassed: function() {
-            $('#topmenu').transition('fade in');
-          },
-          onBottomPassedReverse: function() {
-            $('#topmenu').transition('fade out');
-          }
-        })
-      ;    
-
-      $('.communities.column').click(function() {
-        $('#programme')
-        .modal('show')
-        ;
-        return false;
-      });
-
-      $('.ui.embed').embed(); 
-
-      $('.photos .image')
-        .dimmer({
-          on: 'hover'        
-        });  
-
-      $('.photos .image').click(function() {      
-        var src = $(this).find('img').attr('src');
-        $('#photo').find('img').attr('src', src);
-        $('#photo').modal('setting', 'transition', 'scale').modal('show');
-        return false;
-      });              
-    })
-  ;
-  </script>
-
 </body>
 
 </html>
