promo preview added; map fixed;

--- a/itgm6/index.html
+++ b/itgm6/index.html
@@ -183,7 +183,7 @@
         </div> 
       </div>
       <div class="eight wide column">
-        <div class="ui embed" data-url="https://player.vimeo.com/video/138511320" data-placeholder="assets/images/wireframe/white-image.png" data-icon="right circle arrow">
+        <div class="ui embed" data-url="https://player.vimeo.com/video/138511320" data-placeholder="assets/images/photos/promo_preview.jpg" data-icon="right circle arrow">
         </div>      
       </div>
     </div>
