--- a/itgm6/index.html
+++ b/itgm6/index.html
@@ -42,10 +42,10 @@
 
     <div class="top content">
       <div class="right floated meta">
-        <a ><i class="twitter icon"></i></a>
-        <a ><i class="facebook icon"></i></a>
-        <a ><i class="google plus icon"></i></a>        
-        <a ><i class="vk icon"></i></a>
+        <a class="ui inverted label" href="#"><i class="twitter icon"></i></a>
+        <a class="ui inverted label" href="#"><i class="facebook icon"></i></a>
+        <a class="ui inverted label" href="#"><i class="google plus icon"></i></a>        
+        <a class="ui inverted label" href="#"><i class="vk icon"></i></a>
       </div>
       <img class="ui mini image" src="assets/images/logos/logo_white_full.png"> IT Global Meetup
     </div> 
@@ -535,7 +535,7 @@
 
   <!-- People -->
 
-  <div id="people" class="ui vertical stripe segment">
+  <!--<div id="people" class="ui vertical stripe segment">
     <a class="anchor" id="people_a"></a>
     <div class="ui center aligned container">
         <h1 class="h-hero">
@@ -584,7 +584,7 @@
         </div>       
       </div>              
     </div>
-  </div>
+  </div>-->
 
   <!-- endof People -->
 
@@ -808,8 +808,38 @@
   <!-- endof Map -->
 
   <!-- Footer -->
-  <div class="ui inverted vertical stripe segment">
-
+  <div id="footer" class="ui inverted vertical stripe segment">
+    <div class="ui doubling stackable grid container">
+      <div class="five wide column">
+        <div class="header">
+          Предыдущие мероприятия
+        </div>
+        <div class="content">
+          <a class="ui inverted label">itgm#5</a>
+          <a class="ui inverted label">itgm#4</a>
+          <a class="ui inverted label">itgm#3</a>
+          <a class="ui inverted label">itgm#2</a>
+          <a class="ui inverted label">itgm#1</a>
+        </div>
+      </div>
+      <div class="ui center aligned six wide column">
+        <h2>piterunited@gmail.com</h2>
+        <a class="link" href="http://piter-united.ru/main.html" target="_blank">IT-сообщества Санкт-Петербурга</a>
+      </div>
+      <div class="ui right aligned five wide column">
+        <div class="header">
+          Мы в социальных сетях
+        </div>   
+        <div class="content">     
+          <a class="ui inverted label"><i class="large google plus icon"></i></a>
+          <a class="ui inverted label"><i class="large twitter icon"></i></a>
+          <a class="ui inverted label"><i class="large medium icon"></i></a>
+          <a class="ui inverted label"><i class="large facebook icon"></i></a>
+          <a class="ui inverted label"><i class="large vk icon"></i></a>
+          <a class="ui inverted label"><i class="large linkedin icon"></i></a>  
+        </div>
+      </div>
+    </div>
   </div>
   <!--endof Footer -->
 
