--- a/itgm6/index.html
+++ b/itgm6/index.html
@@ -73,74 +73,12 @@
 
 
     <div class="ui center aligned countdown bottom attached extra content"> 
-      <span class="">до слета осталось: </span>
+      <span class="stat-info">до слета осталось: </span>
       <span class="stat value">{dnn}</span> <span class="stat-info">дней</span> 
       <span class="stat value">{hnn}</span> <span class="stat-info">часов</span> 
       <span class="stat value">{mnn}</span> <span class="stat-info">минут</span> 
     </div>
   </div>  
-
-
-  <!--<div id="firstslide" class="ui inverted vertical stripe segment">
-    <a class="anchor" id="home_a"></a> 
-    <div class="ui middle aligned stackable grid container">
-      <div class="row info">
-        <div class="eight wide center aligned column">
-          <img class="ui centered small image" src="assets/images/logos/logo_white_full.png">          
-          <h1 class="ui inverted header">
-            IT Global Meetup #6
-          </h1>
-          <p>
-            Слет IT-сообществ Санкт-Петербурга
-          </p>
-          <p>
-            Санкт-Петербург, пр. Медиков д.3, КДЦ "Club House"
-          </p>          
-        </div>
-        <div class="eight wide center aligned column">
-          <h2 class="ui inverted header">
-            28 ноября 2015
-          </h2>
-          <p>
-            с 11:00 до 18:00, Суббота
-          </p>
-          <div class="row countdown">  
-            <h3 class="ui inverted header">
-            до слета осталось...
-            </h3>
-            <div class="ui three column grid">
-              <div class="ui four column centered row">
-                <div class="center aligned column">
-                  <div class="counter">
-                    <div class="stat"><span class="value">{dnn}</span></div>
-                    <div class="stat-info">дней</div>
-                  </div>
-                </div>
-                <div class="center aligned column">
-                  <div class="counter">
-                    <div class="stat"><span class="value">{hnn}</span></div>
-                    <div class="stat-info">часов</div>
-                  </div>
-                </div>              
-                <div class="center aligned column">
-                  <div class="counter">
-                    <div class="stat"><span class="value">{mnn}</span></div>
-                    <div class="stat-info">минут</div>
-                  </div>
-                </div> 
-              </div>               
-            </div>                        
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="ui center aligned column cta">
-          <div class="ui huge primary button">Зарегистрироваться</div>
-          <a class="ui huge basic inverted button" href="#programme_a">Программа</a>
-        </div>
-      </div>
-    </div>
-  </div> --> 
 
   <!-- endof First Slide -->
 
@@ -156,30 +94,32 @@
 
     <div class="ui middle aligned stackable centered grid container">
       <div class="eight wide column">
-        <div class="ui three column grid">
-          <div class="row">
-            <div class="center aligned column">
-              <h3 class="stat">
-                30+
-              </h3>
-              <p>сообществ</p>
-            </div>
-            <div class="center aligned column">
+        <div class="row">
+          <div class="ui three column grid">
+            <div class="row">
+              <div class="center aligned column">
                 <h3 class="stat">
-                  800+
+                  30+
                 </h3>
-                <p>участников</p>
-            </div>              
-            <div class="center aligned column">
-                <h3 class="stat">
-                  7
-                </h3>
-                <p>часов общения</p>
-            </div> 
-          </div>                                             
+                <p>сообществ</p>
+              </div>
+              <div class="center aligned column">
+                  <h3 class="stat">
+                    800+
+                  </h3>
+                  <p>участников</p>
+              </div>              
+              <div class="center aligned column">
+                  <h3 class="stat">
+                    7
+                  </h3>
+                  <p>часов общения</p>
+              </div> 
+            </div>                                             
+          </div>
         </div>
         <div class="row">
-          <p>Слет нацелен на обмен профессиональным опытом между IT-специалистами Санкт-Петербурга. Общение происходит на островках сообществ, где участники знакомятся, обсуждают различные профессиональные темы, высказывают мнения, спорят и ищут решения.</p>    
+          <p class="description">Слет нацелен на обмен профессиональным опытом между IT-специалистами Санкт-Петербурга. Общение происходит на островках сообществ, где участники знакомятся, обсуждают различные профессиональные темы, высказывают мнения, спорят и ищут решения.</p>    
         </div> 
       </div>
       <div class="eight wide column">
@@ -451,7 +391,7 @@
   <!-- endof Global programme -->
 
   <!-- Communities -->
-  <div class="ui vertical stripe segment">
+  <div id="communities" class="ui vertical stripe segment">
     <div class="ui center aligned container">
         <h1 class="h-hero">
         Сообщества
@@ -466,10 +406,10 @@
           </div>
         </div>
         <div class="center aligned extra content">          
-            <a class="ui basic label">13:00</a>                      
-            <a class="ui basic label">14:00</a>                   
-            <a class="ui basic label">15:00</a>           
-            <a class="ui basic label">16:00</a>       
+            <a class="ui basic active label">13:00</a>                      
+            <a class="ui basic inactive label">14:00</a>                   
+            <a class="ui basic active label">15:00</a>           
+            <a class="ui basic inactive label">16:00</a>       
         </div>        
       </div>
       <div class="card">
@@ -479,10 +419,10 @@
           </div>
         </div>
         <div class="center aligned extra content">
-              <a class="ui basic label">13:00</a>  
-              <a class="ui basic label">14:00</a> 
-              <a class="ui basic label">15:00</a> 
-              <a class="ui basic label">16:00</a> 
+            <a class="ui basic active label">13:00</a>                      
+            <a class="ui basic inactive label">14:00</a>                   
+            <a class="ui basic active label">15:00</a>           
+            <a class="ui basic inactive label">16:00</a>   
         </div>        
       </div>
       <div class="card">
@@ -492,10 +432,10 @@
           </div>
         </div>
         <div class="center aligned extra content">
-              <a class="ui basic label">13:00</a>  
-              <a class="ui basic label">14:00</a> 
-              <a class="ui basic label">15:00</a> 
-              <a class="ui basic label">16:00</a> 
+            <a class="ui basic active label">13:00</a>                      
+            <a class="ui basic inactive label">14:00</a>                   
+            <a class="ui basic active label">15:00</a>           
+            <a class="ui basic inactive label">16:00</a>   
         </div>        
       </div>
       <div class="card">
@@ -505,10 +445,10 @@
           </div>
         </div>
         <div class="center aligned extra content">
-              <a class="ui basic label">13:00</a>  
-              <a class="ui basic label">14:00</a> 
-              <a class="ui basic label">15:00</a> 
-              <a class="ui basic label">16:00</a> 
+            <a class="ui basic active label">13:00</a>                      
+            <a class="ui basic inactive label">14:00</a>                   
+            <a class="ui basic active label">15:00</a>           
+            <a class="ui basic inactive label">16:00</a>   
         </div>        
       </div>
       <div class="card">
@@ -518,15 +458,15 @@
           </div>
         </div>
         <div class="center aligned extra content">
-              <a class="ui basic label">13:00</a>  
-              <a class="ui basic label">14:00</a> 
-              <a class="ui basic label">15:00</a> 
-              <a class="ui basic label">16:00</a> 
+            <a class="ui basic active label">13:00</a>                      
+            <a class="ui basic inactive label">14:00</a>                   
+            <a class="ui basic active label">15:00</a>           
+            <a class="ui basic inactive label">16:00</a>   
         </div>        
       </div>                        
     </div>
 
-    <div class="ui center aligned container">
+    <div class="ui center aligned container cta">
       <div class="ui huge primary button">Зарегистрироваться</div>
     </div>      
   </div>
@@ -826,7 +766,7 @@
         <h2>piterunited@gmail.com</h2>
         <a class="link" href="http://piter-united.ru/main.html" target="_blank">IT-сообщества Санкт-Петербурга</a>
       </div>
-      <div class="ui right aligned five wide column">
+      <div class="ui right aligned five wide column social">
         <div class="header">
           Мы в социальных сетях
         </div>   
@@ -931,7 +871,7 @@
             <div class="item">
               <div class="empty content">
                 <h3 class="header">Тема не определена</h3>
-                <a class="link" href="#">Хочу выступить!</a>
+                <a class="link" href="#">хочу предложить тему!</a>
               </div>
               
             </div>
