--- a/itgm6/index.html
+++ b/itgm6/index.html
@@ -15,23 +15,41 @@
 
 <!-- Following Menu -->
 <div id="topmenu" class="ui large top fixed hidden borderless menu">
-  <div class="ui container">
-    <a class="item" href="#home_a"><img class="ui centered mini image" src="assets/images/logos/logo_black_full.png"></a>
-    <a class="active item" href="#about_a">О мероприятии</a>
-    <a class="item" href="#programme_a">Программа</a>
-    <a class="item" href="#people_a">Люди</a>
-    <a class="item" href="#map_a">Место</a>
+  <div class="ui grid container">
+    <div class="computer only row">      
+        <a class="item" href="#home_a"><img class="ui centered mini image" src="assets/images/logos/logo_black_full.png"></a>
+        <a class="item" href="#about_a">О мероприятии</a>
+        <a class="item" href="#programme_a">Программа</a>
+        <a class="item" href="#communities_a">Сообщества</a>
+        <a class="item" href="#map_a">Место</a>
 
-    <div class="right menu">
-      <a class="item"><i class="twitter icon"></i></a>
-      <a class="item"><i class="facebook icon"></i></a>
-      <a class="item"><i class="mail icon"></i></a>    
-      <div class="item">
-        <a class="ui primary button">Зарегистрироваться</a>
-      </div>
+        <div class="right menu">
+          <!--<a class="item"><i class="twitter icon"></i></a>
+          <a class="item"><i class="facebook icon"></i></a>
+          <a class="item"><i class="google plus icon"></i></a> 
+          <a class="item"><i class="vk icon"></i></a>-->
+          <div class="item">
+            <a class="ui tiny primary button">Зарегистрироваться</a>
+          </div>
+        </div>      
     </div>
+    <div class="tablet mobile only row"> 
+      <div class="column"> 
+        <a href="#home_a"><img class="ui centered mini image" src="assets/images/logos/logo_black_full.png"></a>
+      </div>
+      <!--<div class="left floated three wide column">  
+        <a href="#home_a"><img class="ui mini image" src="assets/images/logos/logo_black_full.png"></a>
+      </div>
+      <div class="right floated two wide column">        
+        <div>
+          <i class="sidebar icon"></i>
+        </div>
+      </div> =-->
+    </div> 
   </div>
 </div>
+
+
 
 <!-- Page Contents -->
 <div class="pusher">
@@ -67,7 +85,9 @@
     <div class="ui center aligned content">
       <div class="ui center aligned column cta">
         <div class="ui huge primary button">Зарегистрироваться</div>
-        <a class="ui huge basic inverted button" href="#programme_a">Программа</a>
+        <div class="ui huge basic inverted button">
+          Программа
+        </div>
       </div>
     </div>
 
@@ -128,7 +148,7 @@
       </div>
     </div>
     <div class="ui eight column special cards doubling grid photos">
-      <div class="row">
+      <div class="computer tablet only row">
         <div class="column card">
           <a class="ui blurring dimmable medium image" href="#">
             <div class="ui dimmer">
@@ -226,7 +246,7 @@
           </a>          
         </div>        
       </div>      
-      <div class="row">
+      <div class="computer tablet only row">
         <div class="column card">
           <a class="ui blurring dimmable medium image" href="#">
             <div class="ui dimmer">
@@ -392,6 +412,7 @@
 
   <!-- Communities -->
   <div id="communities" class="ui vertical stripe segment">
+    <a class="anchor" id="communities_a"></a>
     <div class="ui center aligned container">
         <h1 class="h-hero">
         Сообщества
@@ -704,7 +725,7 @@
         </h1>     
       <p>Все собранные деньги пойдут на покрытие орг. расходов на мероприятие,
 либо на закупку инвентаря необходимого сообществам (флипчарты, ролл-апы и т.д.).</p>   
-      <iframe frameborder="0" allowtransparency="true" scrolling="no" src="https://money.yandex.ru/embed/shop.xml?account=410011943203218&quickpay=shop&payment-type-choice=on&writer=seller&targets=%D0%9F%D0%BE%D0%B4%D0%B4%D0%B5%D1%80%D0%B6%D0%BA%D0%B0+%D0%B1%D0%B5%D1%81%D0%BF%D0%BB%D0%B0%D1%82%D0%BD%D0%BE%D0%B3%D0%BE+%D0%BC%D0%B5%D1%80%D0%BE%D0%BF%D1%80%D0%B8%D1%8F%D1%82%D0%B8%D1%8F&targets-hint=&default-sum=500&button-text=03&fio=on&successURL=http%3A%2F%2Fpiter-united.ru" width="450" height="198"></iframe>  
+      <iframe frameborder="0" allowtransparency="true" scrolling="no" src="https://money.yandex.ru/embed/shop.xml?account=410011943203218&quickpay=shop&payment-type-choice=on&writer=seller&targets=%D0%9F%D0%BE%D0%B4%D0%B4%D0%B5%D1%80%D0%B6%D0%BA%D0%B0+%D0%B1%D0%B5%D1%81%D0%BF%D0%BB%D0%B0%D1%82%D0%BD%D0%BE%D0%B3%D0%BE+%D0%BC%D0%B5%D1%80%D0%BE%D0%BF%D1%80%D0%B8%D1%8F%D1%82%D0%B8%D1%8F&targets-hint=&default-sum=500&button-text=03&fio=on&successURL=http%3A%2F%2Fpiter-united.ru" width="450" height="198"></iframe>
     </div> 
   </div>
 
@@ -905,8 +926,6 @@
 
 <script src="./assets/js/vendor/jquery.min.js"></script>
 <script src="./dist/semantic.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
-<script src="./assets/js/map.js"></script>
 <script src="./assets/js/site.js"></script>
 <script type="text/javascript" src="./assets/js/vendor/jquery.plugin.js"></script>
 <script type="text/javascript" src="./assets/js/vendor/jquery.countdown.js"></script>
@@ -919,6 +938,8 @@
     layout      : $('.countdown').html()
   });
 </script>
+<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
+<script src="./assets/js/map.js"></script>
 </body>
 
 </html>
