--- a/itgm6/index.html
+++ b/itgm6/index.html
@@ -361,8 +361,8 @@
 
     <div class="ui top aligned stackable grid container">
       <div class="row">
-        <div class="right aligned six wide column">
-          <h2 class="time">11:00 - 12:00</h2>           
+        <div class="right floated three wide column">                                     
+          <h2 class="time">11:00 - 12:00</h2>
         </div>
         <div class="nine wide column">
           <h3 class="ui header">Регистрация участников и приветственный кофе</h3>
@@ -370,7 +370,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="right aligned six wide column">
+        <div class="right floated three wide column">
           <h2 class="time">12:00 - 12:45</h2>           
         </div>
         <div class="nine wide column">
@@ -379,7 +379,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="right aligned six wide column">
+        <div class="right floated three wide column">
           <h2 class="time">12:45 - 13:00</h2>           
         </div>
         <div class="nine wide column">
@@ -388,7 +388,7 @@
         </div>
       </div> 
       <div class="row">
-        <div class="right aligned six wide column">
+        <div class="right floated three wide column">
           <h2 class="time">13:00 - 17:00</h2>           
         </div>
         <div class="nine wide column">
@@ -397,7 +397,7 @@
         </div>
       </div>  
       <div class="row">
-        <div class="right aligned six wide column">
+        <div class="right floated three wide column">
           <h2 class="time">17:00 - 17:30</h2>           
         </div>
         <div class="nine wide column">
