--- a/itgm6/itgm.html
+++ b/itgm6/itgm.html
@@ -19,7 +19,7 @@ title: IT Global Meetup
           <a class="item"><i class="google plus icon"></i></a> 
           <a class="item"><i class="vk icon"></i></a>-->
           <div class="item">
-            <button class="ui large primary button"> Регистрация </button>
+            <button id="reg1" class="ui large primary button"> Регистрация </button>
           </div>
         </div>      
     </div>
@@ -39,13 +39,7 @@ title: IT Global Meetup
   </div>
 </div>
 
-<!-- TimePad Form -->
-<div id="reg_form" class="ui modal">
-  <div class="header">Регистрация на IT Global Meetup #6</div>
-  <div class="content">
-    <a href="https://piter-united.timepad.ru/event/251811/" data-twf-placeholder="yes">Перейти к заказу билетов</a><script type="text/javascript" defer="defer" charset="UTF-8" data-timepad-customized="2669" data-twf2s-event--id="251811" data-timepad-widget-v2="event_register" src="https://timepad.ru/js/tpwf/loader/min/loader.js"></script>
-  </div>
-</div>
+
 
 <!-- Page Contents -->
 <div class="pusher">
@@ -82,7 +76,7 @@ title: IT Global Meetup
 
     <div class="ui center aligned content">
       <div class="ui center aligned column cta">
-        <button class="ui huge primary button"> Регистрация </button>
+        <button id="reg2" class="ui huge primary button"> Регистрация </button>
         <div class="ui huge basic inverted button">
           Программа
         </div>
@@ -119,7 +113,7 @@ title: IT Global Meetup
             <div class="row">
               <div class="aligned column">
                 <h3 class="stat">
-                  27+
+                  30+
                 </h3>
                 <p>сообществ</p>
               </div>
@@ -435,7 +429,7 @@ title: IT Global Meetup
     </div>
 
     <div class="ui center aligned container cta">
-      <button class="ui huge primary button"> Регистрация </button>
+      <button id="reg3" class="ui huge primary button"> Регистрация </button>
     </div>      
   </div>
 
@@ -597,7 +591,7 @@ title: IT Global Meetup
           
         </div> 
         <div class="ui center aligned bottom attached extra content">
-          <button class="ui large primary button"> Регистрация </button>
+          <button id="reg4" class="ui large primary button"> Регистрация </button>
         </div>
       </div>   
     <div id="canvas-map" class="ui segment">
@@ -761,13 +755,23 @@ title: IT Global Meetup
   </div>
 </div>
 
+<!-- TimePad Form -->
+<div id="reg_form" class="ui long modal">
+  <div class="header">Регистрация на IT Global Meetup #6</div>
+  <div class="content">
+    <a href="https://piter-united.timepad.ru/event/251811/" data-twf-placeholder="yes">Перейти к заказу билетов</a><script type="text/javascript" defer="defer" charset="UTF-8" data-timepad-customized="2669" data-twf2s-event--id="251811" data-timepad-widget-v2="event_register" src="https://timepad.ru/js/tpwf/loader/min/loader.js"></script>
+  </div>
+</div>
+
 <script src="./assets/js/vendor/jquery.min.js"></script>
 <script src="./dist/semantic.min.js"></script>
 <script src="./assets/js/site.js"></script>
 <script type="text/javascript" src="./assets/js/vendor/jquery.plugin.js"></script>
 <script type="text/javascript" src="./assets/js/vendor/jquery.countdown.js"></script>
+
 <script type="text/javascript">
-  $('#reg_form').modal('attach events', '.primary.button', 'show');
+  $('#reg_form').modal({blurring: true})
+  .modal('attach events', '.primary.button', 'show');
 </script>
 <script type="text/javascript">
   var futureDate = new Date("November 28, 2015 11:00:00");
