changes to logos url

--- a/itgm/itgm.html
+++ b/itgm/itgm.html
@@ -93,7 +93,7 @@ title: IT Global Meetup
 
 
     <div class="ui center aligned countdown bottom attached extra content"> 
-      <span class="stat-info">ДО СЛЕТА ОСТАЛОСЬ: </span>
+      <span class="stat-info">до слета осталось: </span>
       <span class="stat value">{dnn}</span> <span class="stat-info">дней</span> 
       <span class="stat value">{hnn}</span> <span class="stat-info">часов</span> 
       <span class="stat value">{mnn}</span> <span class="stat-info">минут</span> 
@@ -425,9 +425,9 @@ title: IT Global Meetup
           </div>
         </div>
         <div class="center aligned extra content">          
-            <a class="ui basic active label">13:00</a>                      
+            <a class="ui basic inactive label">13:00</a>                      
             <a class="ui basic inactive label">14:00</a>                   
-            <a class="ui basic active label">15:00</a>           
+            <a class="ui basic inactive label">15:00</a>           
             <a class="ui basic inactive label">16:00</a>       
         </div>        
       </div>
@@ -510,7 +510,7 @@ title: IT Global Meetup
         <div class="content">
           <div class="frame">
             <a href="{{sponsor.link}}" target="_blank">
-              <img src=" {{sponsor.logo}} ">
+              <img src="assets/images/logos/{{sponsor.logo}}">
             </a>
           </div>
         </div>
@@ -542,7 +542,7 @@ title: IT Global Meetup
         <div class="content">
           <div class="frame">
             <a href="{{infopartner.link}}" target="_blank">
-              <img src=" {{infopartner.logo}} ">
+              <img src="assets/images/logos/{{infopartner.logo}} ">
             </a>
           </div>
         </div>       
