--- a/itgm/itgm.html
+++ b/itgm/itgm.html
@@ -714,7 +714,7 @@ title: IT Global Meetup
               <div class="item">
                 <div class="empty content">
                   <h3 class="header">Тема не определена</h3>
-                  <a class="link" href="#">хочу предложить тему!</a>
+                  <!--<a class="link" href="#">хочу предложить тему!</a>-->
                 </div>
                 
               </div>
