--- a/itgm/itgm.html
+++ b/itgm/itgm.html
@@ -57,11 +57,9 @@ title: IT Global Meetup
     <a class="anchor" id="home_a"></a>
 
     <div class="top content">
-      <div class="right floated meta">
-        <a class="ui inverted label" href="#"><i class="twitter icon"></i></a>
-        <a class="ui inverted label" href="#"><i class="facebook icon"></i></a>
-        <a class="ui inverted label" href="#"><i class="google plus icon"></i></a>        
-        <a class="ui inverted label" href="#"><i class="vk icon"></i></a>
+      <div class="right floated meta">      
+        <div class="yashare-auto-init" data-yashareL10n="ru" data-yashareType="small" data-yashareQuickServices="vkontakte,facebook,twitter,gplus" data-yashareTheme="counter" data-yashareTitle="IT Global Meetup #6" data-yashareDescription="28 ноября 2015, с 11.00 до 18.00. Слет ИТ-сообществ Санкт-Петербурга. КДЦ Club House - пр. Медиков 3" data-yashareLink="http://piter-united.ru/itgm/itgm.html" data-yashareImage="/itgm/assets/images/logos/itgm_logo.png">
+        </div>         
       </div>
       <img class="ui mini image" src="assets/images/logos/logo_white_full.png"> IT Global Meetup
     </div> 
@@ -746,3 +744,4 @@ title: IT Global Meetup
 </script>
 <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
 <script src="./assets/js/map.js"></script>
+<script type="text/javascript" src="http://yastatic.net/share/share.js" charset="utf-8"></script>
