added links to social groups and photos from previous meetups

--- a/itgm/itgm.html
+++ b/itgm/itgm.html
@@ -610,10 +610,10 @@ title: IT Global Meetup
           Предыдущие мероприятия
         </div>
         <div class="content">
-          <a class="ui inverted label">itgm#5</a>
-          <a class="ui inverted label">itgm#4</a>
-          <a class="ui inverted label">itgm#3</a>
-          <a class="ui inverted label">itgm#2</a>
+          <a class="ui inverted label" href="https://vk.com/album-71691819_217393589" target="_blank">itgm#5</a>
+          <a class="ui inverted label" href="https://vk.com/album-71691819_212678522" target="_blank">itgm#4</a>
+          <a class="ui inverted label" href="https://vk.com/album-71691819_207371421" target="_blank">itgm#3</a>
+          <a class="ui inverted label" href="https://vk.com/album-71691819_197045853" target="_blank">itgm#2</a>
           <a class="ui inverted label">itgm#1</a>
         </div>
       </div>
@@ -626,12 +626,12 @@ title: IT Global Meetup
           Мы в социальных сетях
         </div>   
         <div class="content">     
-          <a class="ui inverted label"><i class="large google plus icon"></i></a>
-          <a class="ui inverted label"><i class="large twitter icon"></i></a>
-          <a class="ui inverted label"><i class="large medium icon"></i></a>
-          <a class="ui inverted label"><i class="large facebook icon"></i></a>
-          <a class="ui inverted label"><i class="large vk icon"></i></a>
-          <a class="ui inverted label"><i class="large linkedin icon"></i></a>  
+          <a class="ui inverted label" href="https://plus.google.com/u/0/communities/108851235934496354072" target="_blank"><i class="large google plus icon"></i></a>
+          <a class="ui inverted label" href="https://twitter.com/piter_united" target="_blank"><i class="large twitter icon"></i></a>
+          <a class="ui inverted label" href="https://medium.com/@piterunited" target="_blank"><i class="large medium icon"></i></a>
+          <a class="ui inverted label" href="https://www.facebook.com/groups/piterunited/" target="_blank"><i class="large facebook icon"></i></a>
+          <a class="ui inverted label" href="https://vk.com/piterunited" target="_blank"><i class="large vk icon"></i></a>
+          <a class="ui inverted label" href="https://www.linkedin.com/grp/home?gid=8117058" target="_blank"><i class="large linkedin icon"></i></a>  
         </div>
       </div>
     </div>
