"guest speakers" block removed

--- a/itgm/itgm.html
+++ b/itgm/itgm.html
@@ -433,7 +433,7 @@ title: IT Global Meetup
 
   <!-- Guest speakers -->
 
-  <div id="guest_speakers" class="ui vertical stripe segment">
+  <!--<div id="guest_speakers" class="ui vertical stripe segment">
     <div class="ui center aligned container title">
         <h1>
         Приглашенные докладчики
@@ -466,7 +466,7 @@ title: IT Global Meetup
       <button class="ui huge primary button"> Регистрация </button>
     </div>  
 
-  </div>
+  </div>-->
 
   <!-- endof Guest speakers -->
 
