--- a/itgm/itgm.html
+++ b/itgm/itgm.html
@@ -426,7 +426,11 @@ title: IT Global Meetup
         </div>       
       </div>
       {% endfor %}
-    </div>    
+    </div>
+
+    <div class="ui center aligned container cta">
+      <button class="ui huge primary button"> Регистрация </button>
+    </div> 
   </div>
 
   <!-- endof Communities-->
