correct map page added

--- a/itgm/itgm.html
+++ b/itgm/itgm.html
@@ -566,7 +566,7 @@ title: IT Global Meetup
           <div class="description">
             <i class="tiny marker icon"></i> 
             Санкт-Петербург, пр. Медиков д.3, КДЦ “Club House”
-            <a class="link" href="http://piter-united.ru/itgm5/map.html" target="_blank">подробный маршрут</a>
+            <a class="link" href="map.html" target="_blank">подробный маршрут</a>
           </div>
         </div>
         <div class="content">
