--- a/itgm/map.html
+++ b/itgm/map.html
@@ -4,7 +4,7 @@
         <title>IT Global Meetup</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <meta name="description" content="IT Global Meetup. СПб, 28 ноября в Club House. Слет ИТ-сообществ Санкт-Петербурга."/>
+        <meta name="description" content="IT Global Meetup#6. СПб, 28 ноября в Club House. Слет ИТ-сообществ Санкт-Петербурга."/>
 
 	    <meta property="og:title" content="IT Global Meetup" />
 	    <meta property="og:type" content="website" /> 
@@ -17,12 +17,8 @@
 	    <meta name="twitter:description" content="IT Global Meetup. СПб, 28 ноября в Club House. Слет ИТ-сообществ Санкт-Петербурга." />
 	    <meta name="twitter:image" content="http://piter-united.ru/itgm/img/afa.png" />
 
-        <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all"/>
-        <link href="css/theme-lava.css" rel="stylesheet" type="text/css" media="all"/>
-        <link href="css/flexslider.min.css" rel="stylesheet" type="text/css" media="all"/>
-        <link href="css/elegant-icons.min.css" rel="stylesheet" type="text/css" media="all"/>
-        <link href="css/pe-icon-7-stroke.min.css" rel="stylesheet" type="text/css" media="all"/>
-        <link href="css/lightbox.min.css" rel="stylesheet" type="text/css" media="all"/>
+        <link href="assets/map/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all"/>
+        <link href="assets/map/css/theme-lava.css" rel="stylesheet" type="text/css" media="all"/>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,300' rel='stylesheet' type='text/css'>
     </head>
 
@@ -37,8 +33,8 @@
 
                     <div class="row">
                         <div class="col-sm-12 centered">
-                            <a href="/itgm/itgm.html">Вернуться на основной сайт мероприятия</a>
-                            <h1 class="prog_title">Маршрут от метро до IT Global Meetup <br><br><small>КДЦ "Club House", Проспект Медиков д.3</small></h1>
+                            <a href="http://piter-united.ru/itgm/itgm.html">Вернуться на основной сайт мероприятия</a>
+                            <h1 class="prog_title">Маршрут от метро до IT Global Meetup #6<br><br><small>КДЦ "Club House", Проспект Медиков д.3</small></h1>
                         </div>
                     </div>
                     <br>
@@ -47,7 +43,7 @@
                         <div class="speaker-with-bio">
                             <div class="speaker-map-primary">
                                 <div class="image-holder">
-                                    <img class="background-image" alt="Speaker" src="img/map.jpg">
+                                    <img class="background-image" alt="Speaker" src="assets/map/images/map.jpg">
                                 </div>
                             </div>
                         </div>
@@ -57,29 +53,13 @@
                         <div class="speaker-with-bio">
                             <div class="speaker-map">
                                 <div class="image-holder">
-                                    <img class="background-image" alt="Speaker" src="img/1.jpg">
+                                    <img class="background-image" alt="Speaker" src="assets/map/images/1.jpg">
                                 </div>
                             </div>
 
                             <div class="speaker-map">
                                 <div class="image-holder">
-                                    <img class="background-image" alt="Speaker" src="img/2.jpg">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-12 col-sm-12">
-                        <div class="speaker-with-bio">
-                            <div class="speaker-map">
-                                <div class="image-holder">
-                                    <img class="background-image" alt="Speaker" src="img/3.jpg">
-                                </div>
-                            </div>
-
-                            <div class="speaker-map">
-                                <div class="image-holder">
-                                    <img class="background-image" alt="Speaker" src="img/4.jpg">
+                                    <img class="background-image" alt="Speaker" src="assets/map/images/2.jpg">
                                 </div>
                             </div>
                         </div>
@@ -89,13 +69,13 @@
                         <div class="speaker-with-bio">
                             <div class="speaker-map">
                                 <div class="image-holder">
-                                    <img class="background-image" alt="Speaker" src="img/5.jpg">
+                                    <img class="background-image" alt="Speaker" src="assets/map/images/3.jpg">
                                 </div>
                             </div>
 
                             <div class="speaker-map">
                                 <div class="image-holder">
-                                    <img class="background-image" alt="Speaker" src="img/6.jpg">
+                                    <img class="background-image" alt="Speaker" src="assets/map/images/4.jpg">
                                 </div>
                             </div>
                         </div>
@@ -105,7 +85,23 @@
                         <div class="speaker-with-bio">
                             <div class="speaker-map">
                                 <div class="image-holder">
-                                    <img class="background-image" alt="Speaker" src="img/7.jpg">
+                                    <img class="background-image" alt="Speaker" src="assets/map/images/5.jpg">
+                                </div>
+                            </div>
+
+                            <div class="speaker-map">
+                                <div class="image-holder">
+                                    <img class="background-image" alt="Speaker" src="assets/map/images/6.jpg">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-12 col-sm-12">
+                        <div class="speaker-with-bio">
+                            <div class="speaker-map">
+                                <div class="image-holder">
+                                    <img class="background-image" alt="Speaker" src="assets/map/images/7.jpg">
                                 </div>
                             </div>
 
@@ -120,24 +116,13 @@
                 </div>
 
                 <div class="centered">
-                    <a href="/itgm/itgm.html">Вернуться на основной сайт мероприятия</a>
+                    <a href="http://piter-united.ru/itgm/itgm.html">Вернуться на основной сайт мероприятия</a>
                 </div>
 
             </section>
         </div>
 
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" ></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/skrollr.min.js"></script>
-        <script src="js/spectragram.min.js"></script>
-        <script src="js/flexslider.min.js"></script>
-        <script src="js/jquery.plugin.min.js"></script>
-        <script src="js/jquery.countdown.min.js"></script>
-        <script src="js/lightbox.min.js"></script>
-        <script src="js/smooth-scroll.min.js"></script>
-        <script src="js/twitterfetcher.min.js"></script>
-        <script src="js/jquery.prettySocial.min.js"></script>
-        <script src="js/scripts.js"></script>
+        <!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" ></script>-->
 
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
