--- a/itgm/map.html
+++ b/itgm/map.html
@@ -4,17 +4,17 @@
         <title>IT Global Meetup</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <meta name="description" content="IT Global Meetup#6. СПб, 28 ноября в Club House. Слет ИТ-сообществ Санкт-Петербурга."/>
+        <meta name="description" content="IT Global Meetup #6. СПб, 28 ноября в Club House. Слет ИТ-сообществ Санкт-Петербурга."/>
 
-	    <meta property="og:title" content="IT Global Meetup" />
+	    <meta property="og:title" content="IT Global Meetup #6" />
 	    <meta property="og:type" content="website" /> 
 	    <meta property="og:image" content="http://piter-united.ru/itgm/img/afa.png" />
 	    <meta property="og:image:type" content="image/png" /> 
-	    <meta property="og:description" content= "IT Global Meetup. СПб, 28 ноября в Club House. Слет ИТ-сообществ Санкт-Петербурга."/> 
+	    <meta property="og:description" content= "IT Global Meetup #6. СПб, 28 ноября в Club House. Слет ИТ-сообществ Санкт-Петербурга."/> 
 	    <meta property="og:url" content="http://piter-united.ru/itgm/itgm.html">
 
-	    <meta name="twitter:title" content="IT Global Meetup" />
-	    <meta name="twitter:description" content="IT Global Meetup. СПб, 28 ноября в Club House. Слет ИТ-сообществ Санкт-Петербурга." />
+	    <meta name="twitter:title" content="IT Global Meetup #6" />
+	    <meta name="twitter:description" content="IT Global Meetup #6. СПб, 28 ноября в Club House. Слет ИТ-сообществ Санкт-Петербурга." />
 	    <meta name="twitter:image" content="http://piter-united.ru/itgm/img/afa.png" />
 
         <link href="assets/map/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all"/>
@@ -34,7 +34,7 @@
                     <div class="row">
                         <div class="col-sm-12 centered">
                             <a href="http://piter-united.ru/itgm/itgm.html">Вернуться на основной сайт мероприятия</a>
-                            <h1 class="prog_title">Маршрут от метро до IT Global Meetup #6<br><br><small>КДЦ "Club House", Проспект Медиков д.3</small></h1>
+                            <h1 class="prog_title">Маршрут от м. Петроградская до IT Global Meetup #6<br><br><small>КДЦ "Club House", Проспект Медиков д.3</small></h1>
                         </div>
                     </div>
                     <br>
