fix: russian localization for countdown

--- a/itgm/itgm.html
+++ b/itgm/itgm.html
@@ -78,11 +78,11 @@ title: IT Global Meetup
     </div>
 
 
-    <div class="ui center aligned countdown bottom attached extra content"> 
+     <div class="ui center aligned countdown bottom attached extra content">
       <span class="stat-info">до слета осталось: </span>
-      <span class="stat value">{dnn}</span> <span class="stat-info">дней</span> 
-      <span class="stat value">{hnn}</span> <span class="stat-info">часов</span> 
-      <span class="stat value">{mnn}</span> <span class="stat-info">минут</span> 
+      <span class="stat value">{dnn}</span> <span class="stat-info">{dl}</span>
+      <span class="stat value">{hnn}</span> <span class="stat-info">{hl}</span>
+      <span class="stat value">{mnn}</span> <span class="stat-info">{ml}</span>
     </div>
   </div>  
 
@@ -702,6 +702,7 @@ title: IT Global Meetup
 <script src="./assets/js/site.js"></script>
 <script type="text/javascript" src="./assets/js/vendor/jquery.plugin.js"></script>
 <script type="text/javascript" src="./assets/js/vendor/jquery.countdown.js"></script>
+<script type="text/javascript" src="./assets/js/vendor/jquery.countdown-ru.js"></script>
 <script type="text/javascript">
   $('#reg_form').modal('attach events', '.primary.button', 'show');
 </script>
@@ -709,7 +710,6 @@ title: IT Global Meetup
   var futureDate = new Date("November 28, 2015 11:00:00");
   $('.countdown').countdown({
     until       : futureDate, 
-    compact     : true, 
     padZeroes   : true,
     layout      : $('.countdown').html()
   });
