minor fix with timing

--- a/itgm/itgm.html
+++ b/itgm/itgm.html
@@ -376,7 +376,7 @@ title: IT Global Meetup
         </div>
         <div class="nine wide column">
           <h3 class="ui header">Общение на островках сообществ</h3>
-          <p>Все общение на островках будет разбито на сорокаминутные (40 мин.) временные секции (13.00-14.40, 14.00-14.40 и т.д.) с двадцатиминутными (20 мин.) перерывами между ними.</p>
+          <p>Все общение на островках будет разбито на сорокапятиминутные (45 мин.) временные секции (13.00-13.45, 14.00-14.45 и т.д.) с пятнадцатиминутными (15 мин.) перерывами между ними.</p>
         </div>
       </div>  
       <div class="row">
@@ -653,7 +653,7 @@ title: IT Global Meetup
         {% assign time = frame | split: ":" %}
             <div class="center aligned three wide column">
               <h1 class="start">{{time[0]}}:00</h1> 
-              <p>{{time[0]}}:40</p>          
+              <p>{{time[0]}}:45</p>          
             </div>
             
           {% if event %}
