Hide days in event day. Hide countdown and register button when the event started.

--- a/itgm/itgm.html
+++ b/itgm/itgm.html
@@ -80,7 +80,7 @@ title: IT Global Meetup
 
      <div class="ui center aligned countdown bottom attached extra content">
       <span class="stat-info">до слета осталось: </span>
-      <span class="stat value">{dnn}</span> <span class="stat-info">{dl}</span>
+      {d<}<span class="stat value">{dnn}</span> <span class="stat-info">{dl}</span>{d>}
       <span class="stat value">{hnn}</span> <span class="stat-info">{hl}</span>
       <span class="stat value">{mnn}</span> <span class="stat-info">{ml}</span>
     </div>
@@ -709,9 +709,14 @@ title: IT Global Meetup
 <script type="text/javascript">
   var futureDate = new Date("November 28, 2015 11:00:00");
   $('.countdown').countdown({
-    until       : futureDate, 
-    padZeroes   : true,
-    layout      : $('.countdown').html()
+    until: futureDate,
+    padZeroes: true,
+    layout: $('.countdown').html(),
+    alwaysExpire: true,
+    onExpiry: function() {
+      $('.countdown').remove();
+      $('#firstslide .primary.button').remove();
+    }
   });
 </script>
 <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
