--- a/itgm/itgm.html
+++ b/itgm/itgm.html
@@ -664,6 +664,9 @@ title: IT Global Meetup
               {% if event.is_discussion == 1 %}
               <div class="ui tiny orange tag label">Круглый стол</div>      
               {% endif %}
+              {% if event.is_discussion == 2 %}
+              <div class="ui tiny orange tag label">Воркшоп</div>      
+              {% endif %}              
               <div class="ui items">
                 <div class="item">
                   <div class="ui circular image">
