(ITGM#7): ссылки на фото "отзывов" обновил

--- a/itgm7/itgm.html
+++ b/itgm7/itgm.html
@@ -457,19 +457,19 @@ title: IT Global Meetup #7
           <h2 class="hidden">testimonial</h2>
           <div id="testimonial-carousel">
             <div class="item">
-              <img class="img-circle" src="img/testimonial1.png" alt="">
+              <img class="img-circle" src="img/testimonials_photo/testimonial1.png" alt="">
               <p class="lead">Приглашаю всех IT-специалистов на IT Global Meetup!</p>
               <p class="name">Михаил Рыжиков</p>
             </div>
             
             <div class="item">
-              <img class="img-circle" src="img/testimonial2.png" alt="">
+              <img class="img-circle" src="img/testimonials_photo/testimonial2.png" alt="">
               <p class="lead">Когда определенное число людей достигает определенной степени развития, развивается и весь род человеческий.</p>
               <p class="name">Пауло Коэльо</p>
             </div>
             
             <div class="item">
-              <img class="img-circle" src="img/testimonial3.png" alt="">
+              <img class="img-circle" src="img/testimonials_photo/testimonial3.png" alt="">
               <p class="lead">Делитесь знаниями, не жадничайте!</p>
               <p class="name">Сергей Сёмка</p>
             </div>
@@ -493,7 +493,7 @@ title: IT Global Meetup #7
                       <h2 class="">КДЦ "Club House"</h2>
                       <p class="lead">Мероприятие пройдет в КДЦ "Club House". <br>5 минут пешком от м. Петроградская или на своей машине.</p>
                       <h4>Санкт-Петербург. <br> пр. Медиков д.3 корп.1, КДЦ "Club House".</h4>
-                      <img class="img-responsive" src="img/hotel-logo.png" alt="hotel">
+                      <img class="img-responsive" src="img/logo/club-house-logo.png" alt="club-house">
                   </div>
                   <div class="col-lg-4 col-md-4 col-sm-4">
                       <i class="pe-4x pe-7s-map-2"></i>
