(ITGM#7): подменил основное лого сайта (main logo itgm7)

--- a/itgm7/itgm.html
+++ b/itgm7/itgm.html
@@ -21,7 +21,7 @@ title: IT Global Meetup #7
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="/main.html"><img src="img/logo.png" alt="logo"></a>
+      <a href="/main.html"><img src="img/site_logo/main_logo_itgm_white.png" alt="logo"></a>
     </div>
 
     <div class="collapse navbar-collapse" id="nav">
@@ -493,7 +493,7 @@ title: IT Global Meetup #7
                       <h2 class="">КДЦ "Club House"</h2>
                       <p class="lead">Мероприятие пройдет в КДЦ "Club House". <br>5 минут пешком от м. Петроградская или на своей машине.</p>
                       <h4>Санкт-Петербург. <br> пр. Медиков д.3 корп.1, КДЦ "Club House".</h4>
-                      <img class="img-responsive" src="img/logo/club-house-logo.png" alt="club-house">
+                      <img class="img-responsive" src="img/site_logo/club-house-logo.png" alt="club-house">
                   </div>
                   <div class="col-lg-4 col-md-4 col-sm-4">
                       <i class="pe-4x pe-7s-map-2"></i>
