--- a/itgm/map.html
+++ b/itgm/map.html
@@ -124,14 +124,8 @@
 
         <!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" ></script>-->
 
-        <script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-          ga('create', 'UA-49828340-2', 'piter-united.ru');
-          ga('send', 'pageview');
-        </script>
+        <!-- GOOGLE ANALYTICS -->
+        <script src="/js/google-analytics.pageview.piter-united.ru.js"></script>
 
         <!-- Yandex.Metrika counter -->
         <script type="text/javascript">
