--- a/itgm/map.html
+++ b/itgm/map.html
@@ -128,32 +128,9 @@
         <script src="/js/google-analytics.pageview.piter-united.ru.js"></script>
 
         <!-- Yandex.Metrika counter -->
-        <script type="text/javascript">
-        (function (d, w, c) {
-            (w[c] = w[c] || []).push(function() {
-                try {
-                    w.yaCounter26968695 = new Ya.Metrika({id:26968695,
-                            webvisor:true,
-                            clickmap:true,
-                            trackLinks:true,
-                            accurateTrackBounce:true});
-                } catch(e) { }
-            });
-
-            var n = d.getElementsByTagName("script")[0],
-                s = d.createElement("script"),
-                f = function () { n.parentNode.insertBefore(s, n); };
-            s.type = "text/javascript";
-            s.async = true;
-            s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js";
-
-            if (w.opera == "[object Opera]") {
-                d.addEventListener("DOMContentLoaded", f, false);
-            } else { f(); }
-        })(document, window, "yandex_metrika_callbacks");
-        </script>
+        <script type="text/javascript" src="js/yandex-metrika.piter-united.ru.js"></script>
         <noscript><div><img src="//mc.yandex.ru/watch/26968695" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-        <!-- /Yandex.Metrika counter -->
+        <!-- Yandex.Metrika counter -->
 
     </body>
 </html>
