(ITGM#7): удалил "query-параметр"  sensor=false при обращении к maps.google - Гугль говорит, что это уже деприкатед и не юзайте так.
 https://developers.google.com/maps/documentation/javascript/error-messages#sensor-not-required

--- a/itgm/itgm.html
+++ b/itgm/itgm.html
@@ -683,6 +683,6 @@ title: IT Global Meetup
     }
   });
 </script>
-<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
+<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
 <script src="./assets/js/map.js"></script>
 <script type="text/javascript" src="http://yastatic.net/share/share.js" charset="utf-8"></script>
