--- a/itgm6_/itgm.html
+++ b/itgm6_/itgm.html
@@ -782,5 +782,5 @@ title: IT Global Meetup
     layout      : $('.countdown').html()
   });
 </script>
-<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
+<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
 <script src="./assets/js/map.js"></script>
